--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://cybersafellc.github.io/CLIENTS-newsApp",
+  "homepage": "https://clients-news-app.vercel.app/CLIENTS-newsApp/",
   "name": "news-app",
   "version": "0.1.0",
   "private": true,
